feat: 1. redefined the file naming conventions 2. applied signup logic 3. fixed the user_id issue of non-null constraint

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "e-commerce-ads-backend",
   "version": "1.0.0",
-  "description": "A backend for Furniture Inventory",
+  "description": "A backend for E-Commerce",
+  "type": "commonjs",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
