chore: modified the file names and added migration of user tables

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -5,3 +5,5 @@ module.exports = {
   'migrations-path': path.resolve('src/database', 'migrations'),
   'seeders-path': path.resolve('src/database', 'seeders'),
 };
+
+// migration command: npx sequelize migration:create --name create-user
