changes: 1. added login functionality with validation and jwt access 2. fixed some of the codes

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 #1. Backend Environment
 
 PORT=5000
-NODE_ENV='development'
+NODE_ENV= //required(development|production)
 
 #2. Database Configuration #
 DB_DIALECT= postgres
@@ -11,9 +11,9 @@ DB_HOST= localhost
 DB_PORT= 7778
 DB_NAME=  e-commerce-ads-db
 # Connect to Supabase via connection pooling
-DATABASE_URL= //require
+DATABASE_URL= //required(from neon db)
 
 #3. Access Token Configuratio
 #i.1h 6h 12h 24h || 1d 30d 90d  || Refer Documentation for other periods 
-ACCESS_TOKEN_VALIDITY_DURATION=12h
+ACCESS_TOKEN_VALIDITY_DURATION= //required
 JWT_ACCESS_TOKEN_SECRET='secret'
