--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
+    "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.15",
